--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8">
 		<title>NPR News Scraper</title>
 		{{!-- CSS --}}
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		<link rel="stylesheet" href="" type="text/css" />
 		{{!-- UIkit Stylesheet --}}
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
-		<script src="https://code.jquery.com/jquery.js"></script>
 	</head>
 	<body>
 		
@@ -20,4 +19,6 @@
 {{!-- UIkit JS --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="app.js"></script>
 </html>
