--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <h2 class="uk-text-center">Scrape Articles Again</h2>
     {{!-- This scrapes the NPR website again --}}
     <form class="uk-text-center" action="/scrape" method="GET">
-        <button type="submit" class="addBurgerButton">Scrape</button>
+        <button type="submit" class="scrapeBtn">Scrape</button>
     </form>
 </div>
 
