slightly improved styling for the notes inputs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <h2 class="uk-text-center">Scrape Articles Again</h2>
     {{!-- This scrapes the NPR website again --}}
     <form class="uk-text-center" action="/scrape" method="GET">
-        <button type="submit" class="scrapeBtn">Scrape</button>
+        <button type="submit" class="uk-button uk-button-primary uk-button-large" id="scrapeBtn">Scrape</button>
     </form>
 </div>
 
