successfully made the notes section sticky

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,10 @@
 
 </div>
 
-<div class="uk-width-1-2" id="notes">
-<h2 uk-sticky='bottom: #offset'>Notes</h2>
+<div class="uk-width-1-2">
+<div uk-sticky='bottom: #offset' id="notes">
+<h2>Notes</h2>
+</div>
 
 </div>
 
