added view note button instead of clicking on paragraph; added <hr> to articles and <br> for spacing on note

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <h1 class="uk-text-center">NPR News Scraper</h1>
 
 <div class="uk-container uk-align-center">
-    <h2 class="uk-text-center">Scrape Articles Again</h2>
+    <h2 class="uk-text-center">Scrape Articles</h2>
     {{!-- This scrapes the NPR website again --}}
     <form class="uk-text-center" action="/scrape" method="GET">
         <button type="submit" class="uk-button uk-button-primary uk-button-large" id="scrapeBtn">Scrape</button>
